cabal-version:      3.0
name:               brick-bel
version:            0.1.0.0

synopsis: Small wrapper to add subscriptions to Brick apps
description: Small wrapper to add subscriptions to Brick apps, bel (brick elm loop)

author:             functorism

category: Brick

library
    exposed-modules:  Bel
    hs-source-dirs:   src
    default-language: Haskell2010

    build-depends:    base ^>= 4.15.1.0
                    , brick ^>= 0.68
                    , containers ^>= 0.6
                    , optics ^>= 0.4.1
                    , optics-th ^>= 0.4.1
                    , vty ^>= 5.33
